--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                         <h2>Irvin Ramirez</h2>
                         <h2>(he/him/his)</h2>
                         <h3>Web Designer</h3>
-                        <p>Irvin Ramirez (he/him/his) is a senior pursuing a B.A. in Sociology. He is a student who is interested in GIS and Urban Planning and hopes to improve his skills with web mapping through this course. After graduation, he plans on working on enhancing his skills in web mapping and development before applying to graduate school.</p>
+                        <p>Irvin Ramirez is a senior pursuing a B.A. in Sociology. He is a student who is interested in GIS and Urban Planning and hopes to improve his skills with web mapping through this course. After graduation, he plans on working on enhancing his skills in web mapping and development before applying to graduate school.</p>
                     </div>
                     <div class="team-social">
                         <a href="https://www.linkedin.com/in/irvinramirez/" target="_blank" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
