button styling update

--- a/map.html
+++ b/map.html
@@ -71,6 +71,7 @@
 			<p align="center"><button class="button-3" role="button" onclick= (mapBikeLane(),mapStation()) >Show</button>/<button class="button-3-grey" role="button" onclick= (laneLayer.clearLayers(),stationLayer.clearLayers())>Hide</button></p>
 
 			<p>See the change in stations popularity:</p>
+		<div class="row">
 			<div class="dropdown">
 				<button class="dropbtn-red"> Start Stations ▽ </button>
 				<div class="dropdown-content">
@@ -92,10 +93,9 @@
 					<a href="#" onclick="mapEnd()">Total</a>
 				</div>
 			</div>
-
+		</div>
 		<br>
-		<br>
-		<p style="font-size:12px;line-height:12px">*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.</p>
+		<p style="font-size:12px;line-height:12px"><i>*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.</i></p>
 		<br>
 
 	</div>
