--- a/analysis.html
+++ b/analysis.html
@@ -97,6 +97,22 @@
               </tr>
             </tbody>
         </table></p>
+        <p><table class="center">
+          <thead>
+            <tr>
+              <th>Go Electric (Electric Metro Bikes)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Additonal $1 ($2.75/30 Minutes)</td>
+            </tr>
+            <tr>
+              <td>Unlocking additonal $1 fee is waived for 30-Day and 365-Day passholders.</td>
+            </tr>
+          </tbody>
+
+        </table></p>
 
     <br>
   
