--- a/analysis.html
+++ b/analysis.html
@@ -108,7 +108,7 @@
               <td>Additonal $1 ($2.75/30 Minutes)</td>
             </tr>
             <tr>
-              <td>Unlocking additonal $1 fee is waived for 30-Day and 365-Day passholders.</td>
+              <td>Additonal $1 unlocking fee is waived for 30-Day and 365-Day passholders.</td>
             </tr>
           </tbody>
 
